<resources>
    <string name="app_name">ChiccShopping</string>
    <string name="brand_name">Brand Name:</string>
    <string name="chic_shopping">Chic Shopping</string>
    <string name="chic_shopping_is_all_about_being_you_it_has_a_variety_of_good_quality_clothes_which_allow_people_to_express_themselves_in_a_way_that_words_can_t">Chic Shopping is all about being you. It has a variety of good quality clothes which allow people to express themselves in a way that words can\'t.</string>
    <string name="_91_9810587167">+91 9810587167</string>
    <string name="contact_us">Contact us @:</string>
    <string name="chicshoppingofficial_gmail_com">ChicShoppingOfficial@gmail.com</string>
    <string name="about">About:</string>
    <string name="be_bold">Be Bold</string>
    <string name="be_you">Be You</string>
    <string name="todo">TODO</string>
    <string name="okk">TODO</string>
    <string name="welcome_to_chic">Welcome to Chic!</string>
</resources>